[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/scripts/game_over.gd" type="Script" id=1]
[ext_resource path="res://assets/audio/GameOver.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/images/Background.png" type="Texture" id=3]
[ext_resource path="res://assets/images/GameOver.png" type="Texture" id=4]
[ext_resource path="res://assets/images/RestartBtn.png" type="Texture" id=5]
[ext_resource path="res://assets/images/MenuBtn.png" type="Texture" id=6]
[ext_resource path="res://assets/font/nokiafc22.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]

size = 45
use_mipmaps = false
use_filter = false
font_data = ExtResource( 7 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="game_over" type="Node2D"]

position = Vector2( 1.22772, 0 )
script = ExtResource( 1 )

[node name="music" type="AudioStreamPlayer" parent="." index="0"]

stream = ExtResource( 2 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="canvas" type="CanvasLayer" parent="." index="1"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="bg" type="Sprite" parent="canvas" index="0"]

position = Vector2( -286.015, -107.081 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="title" type="Sprite" parent="canvas" index="1"]

position = Vector2( 176.794, 47.8818 )
texture = ExtResource( 4 )

[node name="btn_restart" type="TouchScreenButton" parent="canvas" index="2"]

position = Vector2( 197.635, 419.27 )
normal = ExtResource( 5 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="btn_menu" type="TouchScreenButton" parent="canvas" index="3"]

position = Vector2( 86.635, 419.27 )
normal = ExtResource( 6 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="last_score" type="Label" parent="canvas" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 143.0
margin_right = 337.0
margin_bottom = 205.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "LAST: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts" ]

[node name="best_score" type="Label" parent="canvas" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 224.0
margin_right = 337.0
margin_bottom = 286.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "BEST: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts" ]

[connection signal="pressed" from="canvas/btn_restart" to="." method="_on_btn_restart_pressed"]

[connection signal="pressed" from="canvas/btn_menu" to="." method="_on_btn_menu_pressed"]


